--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link rel="stylesheet" href="https://unpkg.com/tachyons" />
   <link rel="stylesheet" href="https://unpkg.com/animate.css" />
-
+  <link rel="icon" href="https://cdn.glitch.com/91dd0702-e6f3-47f1-bb2b-a47f8a5d3db4%2Ffavicon.ico?1502045862860" type="image/x-icon" />
 </head>
 <body>
 	<div id="app">
